--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,10 @@
   --blackLighter: #9e9e9e;
   --grayLight: #f5f5f5;
   --grayMedium: #e5e5e5;
+  --grayDark: #141414;
   --white: #fff;
   --frontEnd: #68d1ff;
   --backEnd: #00c86f;
-
 }
 
 html,
